--- a/form.html
+++ b/form.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+	<head>        
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<title>Formulaire</title>
+	</head>
 	<body>
 		<form method="post" action="display.php">
 			Nom: <input name="nom">
